kubernetes/ss_ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ss-ingress
spec:
  ingressClassName: nginx
  rules:
    - host: sharespace.client.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: ss-frontend-svc
                port:
                  number: 3000
    - host: sharespace.api.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: ss-backend-svc
                port:
                  number: 2000
